html page added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <header>
+    <h1>Harshini</h1>
+    <p>Aspiring Developer | Learner for Life</p>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <img src="your-photo.jpg" alt="My Photo">
+    <p>Hi! I'm Harshini, a student passionate about tech and growth. I enjoy solving problems, building small projects, and learning every day.</p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML & CSS</li>
+      <li>Python</li>
+      <li>Basic C & Java</li>
+      <li>IoT & NodeMCU Projects</li>
+    </ul>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project">
+      <h3>Smart Fish Feeder</h3>
+      <p>An IoT project using NodeMCU to automate fish feeding via the Blynk app.</p>
+    </div>
+    <div class="project">
+      <h3>Digital Balance Survey</h3>
+      <p>A data collection project comparing rural and urban school tech usage.</p>
+    </div>
+  </section>
+
+  <section id="resume">
+    <h2>Resume</h2>
+    <a href="Harshini_Resume.pdf" target="_blank">Download My Resume (PDF)</a>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: harshini@example.com</p>
+    <p>Phone: +91-1234567890</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Harshini. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
 
