--- a/index.html
+++ b/index.html
@@ -1,61 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+    <title>Portfolio</title>
+    
+    
 </head>
+
 <body>
+    <nav>
+        <div class="container nav-container">
+            <a href="" class="logo">
+                <h2>Rajnish<span> Kumar</span></h2>
+            </a>
+            <ul>
+                <li><a href="#About">About </a></li>
+                <li><a href="#Services">Services</a></li>
+                <li><a href="#Blog">Blog</a></li>
+                <li><a href="#Contact">Contact </a></li>
 
-  <header>
-    <h1>Harshini</h1>
-    <p>Aspiring Developer | Learner for Life</p>
-  </header>
+            </ul>
+        </div>
+    </nav>
+    <header>
+        <div class="header-container container">
+            <div class="header-left">
+                <h1>
+                    Hello,
 
-  <section id="about">
-    <h2>About Me</h2>
-    <img src="your-photo.jpg" alt="My Photo">
-    <p>Hi! I'm Harshini, a student passionate about tech and growth. I enjoy solving problems, building small projects, and learning every day.</p>
-  </section>
+                    <p class="name"> I am <span>Rajnish</span></p>
+                </h1>
+                <p>Proficient in HTML,CSS, Javascript and React.js with
+                    experience in windows and linux<br> environmenst
+                    committed to deliveing hight-quality and driving organzation growth.
+                </p>
 
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li>HTML & CSS</li>
-      <li>Python</li>
-      <li>Basic C & Java</li>
-      <li>IoT & NodeMCU Projects</li>
-    </ul>
-  </section>
+                <h5>Frontend Developer</h5>
+                <br>
+                <div class="header-action-aria">
+                    <a href="cv.pdf" download class="btn btn-primary">Download CV</a>
+                    <a href="" class="btn">Read more</a>
+                </div>
+            </div>
+            <div class="header-right">
+                <img src="pic22.jpeg" alt="">
+            </div>
+    </header>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Smart Fish Feeder</h3>
-      <p>An IoT project using NodeMCU to automate fish feeding via the Blynk app.</p>
-    </div>
-    <div class="project">
-      <h3>Digital Balance Survey</h3>
-      <p>A data collection project comparing rural and urban school tech usage.</p>
-    </div>
-  </section>
+    <section id="About">
+        <h1><span>A</span>BOUT</h1>
+        <div class="container about-container">
+            <p>I'm a diligent <span>Frontend Developer </span>, passionately committed to refining my <span> CSS, HTML,
+                </span> and <span> React </span> skills. My
+                relentless dedication drives me to continually learn and adapt, staying at the forefront of <span>web
+                    development</span> trends. My goal is to create captivating, responsive, and user-friendly web
+                interfaces.</p>
+        </div>
+        <div class="about-content">
+            <article class="about-article">
+                <img src="man.png" alt="">
+                <h5>FULL NAME</h5>
+                <p>Rajnish KUmar</p>
 
-  <section id="resume">
-    <h2>Resume</h2>
-    <a href="Harshini_Resume.pdf" target="_blank">Download My Resume (PDF)</a>
-  </section>
+            </article>
+            <article class="about-article">
+                <img src="email.png" alt="">
+                <h5>EMAIL</h5>
+                <p>sonyrajnish845455@gmail.com </p>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: harshini@example.com</p>
-    <p>Phone: +91-1234567890</p>
-  </section>
+            </article>
+            <article class="about-article">
+                <img src="linkedin.png" alt="">
+                <h5>Linkedin</h5>
+                <p>www.linkedin.com/in/rajnish-kumar-aa9123209</p>
 
-  <footer>
-    <p>&copy; 2025 Harshini. All rights reserved.</p>
-  </footer>
+            </article>
+            <article class="about-article">
+                <img src="telephone-call.png" alt="">
+                <h5>PHONE </h5>
+                <p>+918789512130</p>
+
+            </article>
+        </div>
+    </section>
+
+
+    <section id="Services">
+        <h1><span>W</span>hat I Do</h1>
+
+        <div class="container services-container">
+            <article class="services-article">
+                <img src="software.png" alt="">
+                <h2>Software Development</h2>
+                <p>Software development services encompass designing, coding, testing, and maintaining applications to
+                    meet specific client needs, delivering tailored software solutions.</p>
+            </article>
+            <article class="services-article">
+                <img src="coding.png" alt="">
+                <h2>Web
+                    Development</h2>
+                <p>Web development
+
+                    Crafting websites by coding, designing, and optimizing for functionality, performance, and user
+                    experience, enabling online presence and interaction.</p>
+            </article>
+            <article class="services-article">
+                <img src="python.png" alt="">
+                <h2>Python Programming</h2>
+                <p>
+
+                 Python is extensively applied in data science, data analysis, machine learning, data engineering, web development, software development, and other fields.</p>
+            </article>
+        </div>
+    </section>
+
+    <section id="skills">
+        <h1> <span>M</span>y Skills</h1>
+        <div class="container skills-container">
+            <article class="skill-article">
+
+                <h4>HTML </h4>
+            </article>
+            <article class="skill-article">
+
+                <h4>CSS</h4>
+            </article>
+            <article class="skill-article">
+
+                <h4>Javascript</h4>
+            </article>
+            <article class="skill-article">
+
+                <h4>MySql</h4>
+            </article>
+            <article class="skill-article">
+
+                <h4>Python</h4>
+            </article>
+            <article class="skill-article">
+
+                <h4>WebDesign</h4>
+            </article>
+            <article class="skill-article">
+
+                <h4>Testing</h4>
+            </article>
+            <article class="skill-article">
+
+                <h4>Promt Engineering</h4>
+            </article>
+
+        </div>
+    </section>
+
+
+    <section id="Blog">
+        <div class="row">
+            <div class="header">
+                <h1>B<span>log</span></h1>
+                <p>Welcome to the dynamic world of front-end development, web design, and web development. In this
+                    concise guide, we'll delve into the key aspects of this exciting field.</p>
+            </div>
+            <div class="content">
+                <div class="card">
+
+                    <img src="web design (1).jpg" alt="">
+                    <br>
+                    <p>
+                        Web design is the art of crafting visually appealing and user-friendly websites, blending
+                        elements like typography, color theory, and layout to create memorable online experiences. HTML,
+                        CSS, and JavaScript are the cornerstone languages that enable us to build interactive and
+                        responsive websites, making them not only look great but also function seamlessly on various
+                        devices interface.
+
+                    </p>
+                </div>
+                <div class="card">
+
+                    <img src="web design (2).jpg" alt="">
+                    <br>
+                    <p>
+                        Responsive web design ensures that websites adapt effortlessly to different screen sizes,
+                        offering a consistent experience across platforms. As you progress, you can explore frameworks
+                        like Bootstrap or delve into user-centric design principles to create intuitive interfaces. Web
+                        accessibility creativity and innovation, waiting for you to explore world-wide.
+
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="Contact">
+        <h1> <span>Get</span> In Touch</h1>
+        <div class="contatact-container container">
+            <form>
+                <div class="form-top">
+                    <input type="text" placeholder="  First Name" required>
+                    <input type="text" placeholder="Last Name" required>
+                    <input type="email" placeholder="Email" required>
+                    <input type="number" placeholder="Phone Number" required>
+
+                </div>
+                <div class="form-bottom">
+                    <textarea name="message" placeholder="message"></textarea>
+                    <button type="submit" class="btn btn-primary">Sumbit Now</button>
+                </div>
+            </form>
+        </div>
+    </section>
+    <footer>
+        &copy;Rajnish Kumar
+
+    </footer>
+    <script src="script.js"></script>
 
 </body>
 </html>
-
